--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Eduardo Gubert</title>
+  <title>Currículo Eduardo Gubert</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
