--- a/templates/index.html
+++ b/templates/index.html
@@ -609,9 +609,7 @@
                 <h4>Celular:</h4>
                 <p>+55 (67)99279-8840</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-<!--              <iframe src="https://www.google.com/maps/place/R.+Kame+Takaiassu,+278+-+Carand%C3%A1+Bosque,+Campo+Grande+-+MS,+79032-290/@-20.4435277,-54.5761098,17z/data=!3m1!4b1!4m5!3m4!1s0x9486e8fae1f65a79:0xeb0478232c6808de!8m2!3d-20.4435277!4d-54.5739211" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>-->
+              <iframe src="https://www.google.com/maps/embed/v1/place?q=place_id:EkVSLiBLYW1lIFRha2FpYXNzdSAtIENhcmFuZMOhIEJvc3F1ZSwgQ2FtcG8gR3JhbmRlIC0gTVMsIDc5MDMyLCBCcmF6aWwiLiosChQKEgnbC44o-uiGlBFhcqurU__QNxIUChIJJ7UARPnohpQRUFgoTTygYOM&key=AIzaSyB3IJaW-bSOqipbUvBaD1lSGfnzJ84ahGA" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
