--- a/templates/index.html
+++ b/templates/index.html
@@ -93,8 +93,8 @@
 <!--            </p>-->
               <div class="col-lg-12">
                 <p>
-                  Olá meu nome é Eduardo sou Engenheiro da Computação formado desde 2017, tenho uma paixão por tecnologia e estou sempre procurando novos desafios,
-                minha principal habilidade como a de qualquer desenvolvedor de softwares, é resolver problemas para facilitar e ajudar a vida das pessoas.
+                  Olá, meu nome é Eduardo e eu sou Engenheiro da Computação formado desde 2017, tenho uma paixão por tecnologia e estou sempre procurando novos desafios,
+                minha principal habilidade é resolver problemas para facilitar e ajudar a vida das pessoas.
                 </p>
                </div>
             </div>
@@ -252,7 +252,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Sumario</h3>
             <div class="resume-item pb-0">
               <h4>Eduardo Gubert</h4>
               <p><em>Engenheiro e investidor autônomo com 3 anos de experiência, tenho foco em novos desafios de desenvolvimento, voltado para prazos e resolução de problemas para melhor experiência do usuário.</em></p>
@@ -662,13 +662,7 @@
       <div class="copyright">
         &copy; Copyright <strong><span>Eduardo Gubert</span></strong>
       </div>
-<!--      <div class="credits">-->
-<!--        &lt;!&ndash; All the links in the footer should remain intact. &ndash;&gt;-->
-<!--        &lt;!&ndash; You can delete the links only if you purchased the pro version. &ndash;&gt;-->
-<!--        &lt;!&ndash; Licensing information: https://bootstrapmade.com/license/ &ndash;&gt;-->
-<!--        &lt;!&ndash; Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ &ndash;&gt;-->
-<!--        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
-<!--      </div>-->
+
     </div>
   </footer><!-- End  Footer -->
 
