--- a/templates/index.html
+++ b/templates/index.html
@@ -618,20 +618,20 @@
             <form action="{{ url_for('contact') }}" method="post" role="form" class="php-email-form" >
               <div class="row">
                 <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
+                  <label for="name">Name</label>
                   <input type="text" name="name" class="form-control" id="name" required>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
+                  <label for="name">Email</label>
                   <input type="email" class="form-control" name="email" id="email" required>
                 </div>
               </div>
               <div class="form-group">
-                <label for="name">Subject</label>
+                <label for="name">Sobre</label>
                 <input type="text" class="form-control" name="subject" id="subject" required>
               </div>
               <div class="form-group">
-                <label for="name">Message</label>
+                <label for="name">Menssagem</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
 
