--- a/templates/index.html
+++ b/templates/index.html
@@ -618,7 +618,7 @@
             <form action="{{ url_for('contact') }}" method="post" role="form" class="php-email-form" >
               <div class="row">
                 <div class="form-group col-md-6">
-                  <label for="name">Name</label>
+                  <label for="name">Nome</label>
                   <input type="text" name="name" class="form-control" id="name" required>
                 </div>
                 <div class="form-group col-md-6">
@@ -627,7 +627,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="name">Sobre</label>
+                <label for="name">Assunto</label>
                 <input type="text" class="form-control" name="subject" id="subject" required>
               </div>
               <div class="form-group">
@@ -645,7 +645,7 @@
                   <div class="error-message"></div>
                   {% endif %}
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Enviar Mensagem</button></div>
             </form>
           </div>
 
