--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Linguagens e frameworks que tenho conhecimento.</p>
+          <p>Algumas linguagens e frameworks que tenho conhecimento.</p>
         </div>
 
         <div class="row skills-content">
