--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumo</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+         <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>-->
 <!--          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contato</span></a></li>
         </ul>
@@ -130,13 +130,13 @@
             </div>
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">60%</i></span>
+              <span class="skill">HTML <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">60%</i></span>
+              <span class="skill">JavaScript <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -147,28 +147,28 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">60%</i></span>
+              <span class="skill">SQL <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Docker <i class="val">50%</i></span>
+              <span class="skill">C# <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Bootstrap <i class="val">55%</i></span>
+              <span class="skill">Bootstrap <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Git<i class="val">70%</i></span>
+              <span class="skill">Angular 2<i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -197,7 +197,10 @@
             <h3 class="resume-title">Sumario</h3>
             <div class="resume-item pb-0">
               <h4>Eduardo Gubert</h4>
-              <p><em>Engenheiro e investidor autônomo com 3 anos de experiência, tenho foco em novos desafios de desenvolvimento, voltado para prazos e resolução de problemas para melhor experiência do usuário.</em></p>
+              <p><em>Formado em engenharia da computação e certificado como consultor e especialista em investimento,
+                    busco oportunidades de carreira em tecnologia , onde eu possa contribuir com habilidades que adquiri,
+                    me capacitar e buscar novos conhecimentos, de forma a agregar nos resultados da empresa e em novas
+                    experiências profissionais.</em></p>
               <ul>
                 <li>Campo Grande, MS</li>
                 <li>(67)99279-8840</li>
@@ -210,7 +213,11 @@
               <h4>Engenheiro Da Computação</h4>
               <h5>2013 - 2017</h5>
               <p><em>UCDB -  Universidade Católica Dom Bosco</em></p>
-              <p>O Engenheiro de Computação atua na área de sistemas computacionais, em seus respectivos equipamentos, programas e inter-relações. Em sua atividade, planeja, projeta, especifica, adapta, instala, mantém e opera sistemas computacionais. </p>
+            </div>
+            <div class="resume-item">
+              <h4>PÓS ARQUITETURA E GESTÃO DE INFRAESTRUTURA EM TI</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>UNIBF</em></p>
             </div>
             <div class="resume-item">
               <h4>Tecnico em Implatação de Rede Local</h4>
@@ -230,6 +237,25 @@
               <p><em>Udemy - 100 Days of Code - The Complete Python Pro Bootcamp for 2021</em></p>
               <p>Curso completo para desenvolvimento Python e Frameworks</p>
             </div>
+             <div class="resume-item">
+              <h4>Carreira Desenvolvedor Backend .NET</h4>
+              <h5>2021 - 2022 </h5>
+              <p><em>Balta.io</em></p>
+              <p>Tudo sobre a criação de aplicações utilizando .NET, dos fundamentos a arquitetura de software</p>
+            </div>
+             <div class="resume-item">
+              <h4>SOLID com C#</h4>
+              <h5>2021 - 2022 </h5>
+              <p><em> Alura - Princípios da Programação Orientada a Objetos</em></p>
+              <p>Curso focado em melhor desenvolvimento de softwares utilizando design patterns solid</p>
+            </div>
+             </div>
+             <div class="resume-item">
+              <h4>Full-Stack com .NET Web API e Angular + EF Core</h4>
+              <h5>2021 - 2022 </h5>
+              <p><em> Udemy - Angular e ASP.NET Core Web API, Entity Framework Core e ASP.NET Core Identity </em></p>
+              <p>Curso focado em melhor desenvolvimento de softwares utilizando design patterns solid</p>
+            </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Experiencia Proficional</h3>
@@ -243,17 +269,6 @@
                 <li>Monitoramento, testes e suporte em banco de dados.</li>
               </ul>
             </div>
-            <div class="resume-item">
-              <h4>Bartender e Chefe de Bar</h4>
-              <h5>2016 - 2020</h5>
-              <p><em>MalibuBartenders, Campo Grade, MS</em></p>
-              <ul>
-                <li> Atendimento a clientes em eventos festivos, execução e apresentação de drinks. </li>
-                <li>Barback de bar, controle e reposição de insumos em eventos.</li>
-                <li>Liderança de equipes de bartenders em eventos, atendimento personalizado a cliente e fornecedores, gestão de bar. </li>
-                <li>venda de serviços extras em eventos, logística em bares de eventos. </li>
-              </ul>
-            </div>
              <div class="resume-item">
               <h4>Sales Development Representative - SDR</h4>
               <h5>2021 - 2021</h5>
@@ -264,6 +279,16 @@
                 <li> Agendamento e direcionamento a assessoria de investimentos para formação de carteira de clientes. </li>
               </ul>
             </div>
+             <div class="resume-item">
+              <h4>ANÁLISTA DE DESENVOLVIMENTO DE SISTEMAS</h4>
+              <h5>2021 -</h5>
+              <p><em>GEOI2 TI LTDA, Campo Grande, MS</em></p>
+              <ul>
+                <li> Desenvolvimento, análise e manutenção de sistemas do governo do estado de Mato Grosso do Sul. Fazendo melhorias e</li>
+                <li> ampliando novas funcionalidades Front_end e Back_end, utilizando liguagens de programção C#, JavaScript, Html 5, Css3, </li>
+                <li> frameworks como Bootstrap e arquiteturas MVC. Além de aperfeiçoamento e pesquisa em banco de dados com SQL.</li>
+              </ul>
+            </div>
           </div>
         </div>
 
@@ -272,7 +297,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+   <!--  <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -325,7 +350,7 @@
         </div>
       </div>
     </section>
-
+-->
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
